2013-06-03 Mon  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage-autoload-generate-loaddefs-dir): If
	no autoloads found, skip clean up function
	`epackage-autoload-remove-path-names-file'.

2013-06-02 Sun  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage--info-mode-completions-license): Add
	MIT. Chnage docstring to Official SPDX.

2013-06-01 Sat  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage-loader-file-insert-main): Insert
	00conf directory.
	(epackage-loader-file-byte-compile): Before byte compile
	add package directories to `load-path'.
	(epackage--directory-name-install): Rename directory from
	00install to 10install. WARNING: INCOMPATIBLE CHANGE. Rename
	manually your directories to new name.

2013-05-30 Thu  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage-autoload-remove-path-names-buffer): New.
	(epackage-autoload-remove-path-names-file): Rename.
	Was `epackage-autoload-remove-path-names'.
	(epackage-batch-autoload-generate-loaddefs-dir): tighten regexp
	to read previous *0loaddefs* with `directory-files'.

2013-05-29 Wed  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage-defun-regexp): New.
	(epackage-emacs-lisp-mode-maybe): New.
	(epackage-autoload-create-on-file): Use
	`epackage-defun-regexp' and `epackage-autoload-create-on-file'.
	Correct while loop and forward-sexp position.

2013-05-09 Thu  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el: Correct spelling of autoload word.
	(epackage-autoload-remove-path-names): Improve
	regexp in `re-search-forward' call.

2012-12-10 Mon  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage-lint-extra-buffer-run-other-defcustom):
	Use backward-sexp to find documentation string start.
	(epackage-info-mode): No a user variable, drop * from docstring.

2012-12-06 Fri  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el: Correct byte compiler problems.

2012-11-14 Wed  Jari Aalto  <jari.aalto@cante.net>
